Fix layout issues

--- a/css/app.css
+++ b/css/app.css
@@ -95,6 +95,8 @@ table {
 	table-layout: fixed;
 	width: 100%;
 	max-width: 600px;
+	position: relative;
+	top: -50px;
 }
 
 tr td:nth-child(1) {
@@ -113,7 +115,8 @@ tr th:nth-child(2) {
 }
 
 tr th:nth-child(3) {
-  width: 35%;
+	width: 35%;
+	text-align: left;
 }
 
 tr th:nth-child(4) {
